--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   responsive_framework: ^0.2.0
   google_fonts: ^3.0.1
   flutter_fadein: ^2.0.0
+  iconsax: ^0.0.8
+  url_launcher: ^6.0.8
 
 dev_dependencies:
   flutter_test:
