--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_fadein: ^2.0.0
   iconsax: ^0.0.8
   url_launcher: ^6.0.8
+  firebase_messaging: ^10.0.7
+  firebase_core: ^1.6.0
+  cloud_firestore: ^3.1.16
 
 dev_dependencies:
   flutter_test:
