--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,8 @@ flutter:
     - images/sonda.png
     - images/taquaral.png
     - images/tenda.png
+    - images/carrinhocompras.png
+    - images/compras.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
