--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.2.0+1
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^10.0.7
   firebase_core: ^1.6.0
   cloud_firestore: ^3.1.16
+  google_mobile_ads: ^0.13.3
 
 dev_dependencies:
   flutter_test:
